<resources>
    <string name="app_name">TUBBIZ</string>
    <string name="title_activity_login">Entra</string>
    <string name="dni">DNI</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="registrate_aqui">Registrate Aquí</string>
    <string name="Rdni">DNI</string>
    <string name="Rnombre">NOMBRE</string>
    <string name="Rapellidos">APELLIDOS</string>
    <string name="Remail">EMAIL</string>
    <string name="Rpassword">PASSWORD</string>
    <string name="Rregistrar">Registrar</string>
    <string name="AUDni">DNI</string>
    <string name="AUNombre">Nombre</string>
    <string name="registrateAhora">Regístrate ahora</string>
    <string name="entrar">entrar</string>
    <string name="registrar">registrar</string>
    <string name="logo">imagen corporativo</string>
    <string name="action_settings">preferencias</string>

    <!-- Menus Genericos -->
    <string name="importar">Importar</string>
    <string name="actualizar">Actualizar</string>
    <string name="eliminar">Eliminar</string>
    <string name="buscar">Buscar</string>
    <!-- Admin -->
    <string name="title_activity_area_admin">Area de Administrador</string>
    <!-- Usuario -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_area_usuario">Area de Usuario</string>
    <!-- Subir imagen -->
    <string name="bEscoger">Escoger imagen</string>
    <string name="bSubir">Subir libro</string>
    <string name="foto_de_la_imagen_a_subir">foto de la imagen a subir</string>
    <string name="etIsbn">Entrar ISBN</string>
    <string name="etNombre">Entrar nombre</string>
    <string name="etEditorial">Entrar editorial</string>
    <string name="etAutor">Entrar autor</string>
    <string name="etGenero">Entrar genero</string>
    <string name="etPrecio">Entrar precio</string>
    <string name="etTipo">Entrar tipo</string>

    <string name="imagen_del_libro">Imagen del libro</string>

</resources>
